--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "recoil": "^0.7.6",
     "sass": "^1.55.0",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.0",
+    "web3modal": "^1.9.9"
   },
   "scripts": {
     "start": "react-scripts start",
