--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "echarts": "^5.4.0",
+    "material-react-toastify": "^1.0.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
